--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "colors": "^1.4.0",
         "cors": "^2.8.5",
         "express": "^4.18.2",
+        "express-async-handler": "^1.2.0",
         "mongoose": "^8.0.0"
     },
     "devDependencies": {
