--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
         "react-router-bootstrap": "^0.26.2",
         "react-router-dom": "^6.17.0",
         "react-scripts": "^5.0.1",
+        "react-toastify": "^9.1.3",
         "sass": "^1.69.5",
         "the-new-css-reset": "^1.11.0",
         "web-vitals": "^2.1.4"
