--- a/template.env
+++ b/template.env
@@ -5,3 +5,5 @@ PORT = 5001
 MONGO_URI = mongodb+srv://<user>:<password>@cluster0.n8e5hiy.mongodb.net/JustShop?retryWrites=true&w=majority
 
 JSONWEBTOKEN_SECRET = 123456
+
+PAYPAL_CLIENT_ID = <PayPal client ID>
