Put pagination limit to env file

--- a/template.env
+++ b/template.env
@@ -7,3 +7,5 @@ MONGO_URI = mongodb+srv://<user>:<password>@cluster0.n8e5hiy.mongodb.net/JustSho
 JSONWEBTOKEN_SECRET = 123456
 
 PAYPAL_CLIENT_ID = <PayPal client ID>
+
+PAGINATION_LIMIT = 8
