Fix a deployment bug

--- a/package.json
+++ b/package.json
@@ -1,41 +1,42 @@
 {
-    "name": "ecommerce-platform",
-    "version": "1.0.0",
-    "description": "eCommerce application built with the MERN stack",
-    "type": "module",
-    "main": "server.js",
-    "scripts": {
-        "start": "node backend/server.js",
-        "server": "nodemon backend/server.js",
-        "client": "npm start --prefix frontend",
-        "dev": "concurrently \"npm run server\" \"npm run client\" ",
-        "importData": "node backend/data/seeds.js",
-        "deleteData": "node backend/data/seeds.js -d"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/klfcola/ecommerce-platform.git"
-    },
-    "author": "Gerardo Acedo & Kevin Lee",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/klfcola/ecommerce-platform/issues"
-    },
-    "homepage": "https://github.com/klfcola/ecommerce-platform#readme",
-    "dependencies": {
-        "bcryptjs": "^2.4.3",
-        "colors": "^1.4.0",
-        "cookie-parser": "^1.4.6",
-        "cors": "^2.8.5",
-        "express": "^4.18.2",
-        "express-async-handler": "^1.2.0",
-        "jsonwebtoken": "^9.0.2",
-        "mongoose": "^8.0.0",
-        "multer": "^1.4.5-lts.1"
-    },
-    "devDependencies": {
-        "concurrently": "^8.2.2",
-        "dotenv": "^16.3.1",
-        "nodemon": "^3.0.1"
-    }
+  "name": "ecommerce-platform",
+  "version": "1.0.0",
+  "description": "eCommerce application built with the MERN stack",
+  "type": "module",
+  "main": "server.js",
+  "scripts": {
+    "start": "node backend/server.js",
+    "server": "nodemon backend/server.js",
+    "client": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run server\" \"npm run client\" ",
+    "importData": "node backend/data/seeds.js",
+    "deleteData": "node backend/data/seeds.js -d",
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/klfcola/ecommerce-platform.git"
+  },
+  "author": "Gerardo Acedo & Kevin Lee",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/klfcola/ecommerce-platform/issues"
+  },
+  "homepage": "https://github.com/klfcola/ecommerce-platform#readme",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "colors": "^1.4.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.0",
+    "multer": "^1.4.5-lts.1"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2",
+    "dotenv": "^16.3.1",
+    "nodemon": "^3.0.1"
+  }
 }
