--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
     "sass": "^1.69.5",
+    "serve": "^14.2.3",
     "the-new-css-reset": "^1.11.0",
     "web-vitals": "^2.1.4"
   },
