--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,6 @@
     "react-redux": "^8.1.3",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.17.0",
-    "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
     "sass": "^1.69.5",
     "serve": "^14.2.3",
@@ -55,6 +54,8 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-transform-private-property-in-object": "^7.24.7",
     "@babel/preset-env": "^7.25.4",
-    "@babel/preset-react": "^7.24.7"
+    "@babel/preset-react": "^7.24.7",
+    "babel-preset-react-app": "^10.0.1",
+    "react-scripts": "^5.0.1"
   }
 }
