--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "https://justshop-backend.onrender.com",
   "dependencies": {
+    "react-scripts": "^5.0.1",
     "@paypal/react-paypal-js": "^8.1.3",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
@@ -55,7 +56,6 @@
     "@babel/plugin-transform-private-property-in-object": "^7.24.7",
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-react": "^7.24.7",
-    "babel-preset-react-app": "^10.0.1",
-    "react-scripts": "^5.0.1"
+    "babel-preset-react-app": "^10.0.1"
   }
 }
